better structure & etst buttons debug info

--- a/html/settings.html
+++ b/html/settings.html
@@ -35,11 +35,15 @@
 
     <div id="AdvancedSettings" class="tab">
         <h2></h2>
-        <button onclick="test1()">Test 1</button>
-        <button onclick="test2()">Test 2</button>
-        <button onclick="test3()">Test 3</button>
+        <button id="test1">Test 1</button>
+        <button id="test2">Test 2</button>
+        <button id="test3">Test 3</button>
     </div>
+    
 
-    <script src="settings.js"></script>
+
+    <script src="../scripts/settings.js"></script>
+
+
 </body>
 </html>
