Update title, add save button, give distance_converter access to extension storage

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extension Settings</title>
+    <title>Enhancer Settings</title>
     <style>
         .tab {
             display: none;
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Extension Settings</h1>
+    <h1>Enhancer Settings</h1>
 
     <div id="tabs">
         <button class="tablink" data-tab="GeneralSettings">General Settings</button>
@@ -27,6 +27,7 @@
             <option value="feet">Feet</option>
             <option value="miles">Miles</option>
         </select>
+        <button id="save">Save</button>
     </div>
 
     <div id="AdvancedSettings" class="tab">
@@ -39,6 +40,7 @@
 
 
     <script src="../scripts/settings.js"></script>
+    <script src="../scripts/distance_converter.js"></script>
 
 
 </body>
